# yosina

./: .gitignore  .gitmodules  Makefile  PUBLISHING.md  README.ja.md  README.md  yosina.code-workspace
.github/workflows/: ci.yml
csharp/: .editorconfig  Directory.Build.props  Makefile  README.ja.md  README.md  Yosina.sln  stylecop.json
csharp/docs/: docfx.json
csharp/test/: Directory.Build.props
dart/: .gitignore  README.ja.md  README.md  analysis_options.yaml  pubspec.yaml
dart/codegen/: generate.dart
dart/example/: advanced_usage.dart  basic_usage.dart  config_based_usage.dart  main.dart  pubspec.yaml
dart/lib/: yosina.dart
dart/test/: hira_kata_test.dart  historical_hirakatas_test.dart  integration_test.dart  ivs_svs_base_test.dart  japanese_iteration_marks_test.dart  jisx0201_and_alike_test.dart  kanji_old_new_test.dart  new_transliterators_test.dart  roman_numerals_test.dart  transliteration_recipe_test.dart  transliterator_recipe_test.dart  transliterators_test.dart  yosina_test.dart
examples/dart/: README.md
examples/go/: go.mod  go.sum
examples/icu4c/: CMakeLists.txt  README.md  basic_usage.cpp
examples/icu4j/: README.md  build.gradle  settings.gradle
examples/java/: README.md
examples/php/: README.md  composer.json
examples/python/: README.md  advanced_usage.py  basic_usage.py  config_based_usage.py  pyproject.toml
examples/ruby/: Gemfile  README.md  advanced_usage.rb  basic_usage.rb  config_based_usage.rb  yosina-example.gemspec
examples/rust/: README.md
examples/swift/: README.md
go/: README.ja.md  README.md  char.go  char_test.go  go.mod  go.sum  transliterator.go
go/recipe/: make_transliterator.go  recipe.go  recipe_test.go
icu/: README.md
icu/codegen/: generate_icu_rules.py
icu/rules/: archaic_hirakatas.txt  circled_or_squared.txt  combined.txt  hira_kata_composition.txt  hira_to_kata.txt  historical_hirakatas.txt  hyphens.txt  ideographic_annotations.txt  ivs_svs_base_unijis_2004.txt  ivs_svs_base_unijis_90.txt  japanese_iteration_marks.txt  jisx0201_and_alike.txt  kanji_old_new.txt  kata_to_hira.txt  mathematical_alphanumerics.txt  prolonged_sound_marks.txt  radicals.txt  roman_numerals.txt  small_hirakatas.txt  spaces.txt
icu/tests/: .gitignore  README.md  build.gradle  settings.gradle
java/: .gitignore  README.ja.md  README.md  build.gradle  settings.gradle
java/codegen/: build.gradle
java/examples/: README.md  build.gradle
javascript/: .gitignore  .npmignore  README.ja.md  README.md  biome.json  jest.config.mjs  package-lock.json  package.json  rollup.config.mjs  test.mjs  tsconfig.cjs.json  tsconfig.json  typedoc.config.mjs
javascript/codegen/: dataset.ts  emitters.ts  index.ts  loaders.ts  parsers.ts
javascript/src/: chars.ts  index.ts  intrinsics.ts  recipes.ts  types.ts
php/: README.md  composer.json
php/codegen/: generate.php
php/src/: Char.php  TransliteratorRecipe.php  TransliteratorRegistry.php  Yosina.php
php/tests/: BasicTest.php  HiraKataCompositionTransliteratorTest.php  JisX0201AndAlikeTransliteratorTest.php  TransliteratorRecipeTest.php
python/: .gitignore  README.ja.md  README.md  pyproject.toml
python/codegen/: dataset.py  emitters.py  loaders.py  main.py  models.py  parsers.py
python/docs/source/: api.md  conf.py  index.md
python/docs/source/_static/: assets
python/src/yosina/: __init__.py  chars.py  intrinsics.py  recipes.py  transliterator.py  types.py
python/src/yosina/transliterators/: __init__.py  archaic_hirakatas.py  circled_or_squared.py  combined.py  hira_kata.py  hira_kata_composition.py  hira_kata_table.py  historical_hirakatas.py  hyphens.py  hyphens_data.py  ideographic_annotations.py  ivs_svs_base.py  ivs_svs_base_data.py  japanese_iteration_marks.py  jisx0201_and_alike.py  kanji_old_new.py  mathematical_alphanumerics.py  prolonged_sound_marks.py  radicals.py  roman_numerals.py  small_hirakatas.py  spaces.py
python/tests/: __init__.py  test_basic.py  test_chars.py  test_circled_or_squared.py  test_combined.py  test_combined_transliterators.py  test_hira_kata_composition.py  test_intrinsics.py  test_ivs_svs_base.py  test_japanese_iteration_marks.py  test_jisx0201_and_alike.py  test_kanji_old_new.py  test_prolonged_sound_marks.py  test_radicals.py  test_recipe.py  test_roman_numerals.py
python/tests/transliterators/: test_hira_kata.py  test_historical_hirakatas.py
ruby/: .gitignore  .rubocop.yml  Gemfile  README.ja.md  README.md  Rakefile  yosina.gemspec
ruby/codegen/: dataset.rb  emitters.rb  main.rb
ruby/lib/: yosina.rb
ruby/test/: test_basic.rb  test_circled_or_squared.rb  test_combined.rb  test_hira_kata.rb  test_hira_kata_composition.rb  test_hyphens.rb  (+9 more)
rust/: Cargo.toml  README.ja.md  README.md
rust/examples/: advanced_usage.rs  basic_usage.rs  config_based_usage.rs  japanese_iteration_marks.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: char.rs
rust/src/: char.rs  config.rs  lib.rs  recipes.rs  transliterator.rs
rust/src/codegen/: dataset.rs  emitter.rs  loaders.rs  main.rs  models.rs  parsers.rs
rust/src/transliterators/: archaic_hirakatas.rs  circled_or_squared.rs  circled_or_squared_data.rs  combined.rs  hira_kata.rs  hira_kata_composition.rs  hira_kata_table.rs  historical_hirakatas.rs  hyphens.rs  hyphens_data.rs  ideographic_annotations.rs  ivs_svs_base.rs  ivs_svs_base_data.rs  japanese_iteration_marks.rs  jisx0201_and_alike.rs  kanji_old_new.rs  mathematical_alphanumerics.rs  mod.rs  prolonged_sound_marks.rs  radicals.rs  roman_numerals.rs  roman_numerals_data.rs  simple.rs  small_hirakatas.rs  spaces.rs
rust/tests/: test_circled_or_squared.rs  test_combined.rs  test_recipe.rs  test_roman_numerals.rs
swift/: README.md
(+490 files in other folders)
