[package]
name = "yosina"
version = "0.1.0"
edition = "2021"
authors = ["Moriyoshi Koizumi"]
description = "Japanese text transliteration library"
license = "MIT"

[lib]
name = "yosina"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "codegen"
path = "src/codegen/main.rs"
required-features = ["codegen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"], optional = true }
proc-macro2 = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
thiserror = "2.0.12"
lazy_static = "1.5.0"
itertools = "0.14.0"

[features]
default = []
codegen = ["dep:syn", "dep:proc-macro2", "dep:anyhow"]

[dev-dependencies]
anyhow = "1.0"
